refactoring no app importado

--- a/Android/edu.stu.cc.amarino.NTL_Bluetooth_Car-master/.project
+++ b/Android/edu.stu.cc.amarino.NTL_Bluetooth_Car-master/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NTL_Bluetooth_Car_ver3.0</name>
+	<name>RobotBluetoothControl</name>
 	<comment></comment>
 	<projects>
 	</projects>
