--- a/Android/edu.stu.cc.amarino.NTL_Bluetooth_Car-master/AndroidManifest.xml
+++ b/Android/edu.stu.cc.amarino.NTL_Bluetooth_Car-master/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="edu.stu.cc.amarino.NTL_Bluetooth_Car" android:versionCode="1"
+	package="org.guims.robot.RobotControl" android:versionCode="1"
 	android:versionName="1.0">
 
 	<application android:debuggable="true" android:icon="@drawable/icon"
 		android:label="@string/app_name">
-		<activity android:name="edu.stu.cc.amarino.NTL_Bluetooth_Car.NTL_Bluetooth_Car"
+		<activity android:name="org.guims.robot.RobotControl.RobotBluetoothControl"
 			android:label="@string/app_name" android:screenOrientation="sensor">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
