--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -3,6 +3,9 @@
 	package="org.guims.robot.RobotControl" android:versionCode="1"
 	android:versionName="1.0">
 
+	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
+	<uses-permission android:name="android.permission.INTERNET"/>
+	
 	<application android:debuggable="true" android:icon="@drawable/icon"
 		android:label="@string/app_name">
 		<activity android:name="org.guims.robot.RobotControl.RobotBluetoothControl"
@@ -13,6 +16,4 @@
 			</intent-filter>
 		</activity>
 	</application>
-
-	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
 </manifest>
