--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -3,8 +3,11 @@
 	package="org.guims.robot.RobotControl" android:versionCode="1"
 	android:versionName="1.0">
 
-	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
+	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="8" />
 	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-feature android:name="android.hardware.camera" />
+	<uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	
 	<application android:debuggable="true" android:icon="@drawable/icon"
 		android:label="@string/app_name">
